--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-igreja",
+  "name": "temp-igreja",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,27 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/uuid": "^10.0.0",
-    "date-fns": "^4.1.0",
-    "node-pix": "^1.5.2",
-    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0",
-    "uuid": "^11.1.0"
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0"
   }
 }
