Chore: Complete project rebuild with correct dependencies

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "src/components/Layout.tsx"]
+  "include": ["src"]
 }
